Disabling various unittests that fail or stops the unittestersuite.